# YADRO-Task

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  delays.txt
include/: ITape.h  Setup.h  Tape.h  TapeSorter.h
src/: CMakeLists.txt  Makefile  Setup.cpp  Tape.cpp  TapeSorter.cpp  main.cpp
src/algorithms/: SortingAlgorithm.cpp  SortingAlgorithm.h
src/config/: Config_Parser.cpp  Config_Parser.h  config.txt
src/tape/: FileTape.cpp  FileTape.h  Tape.h
tests/: CMakeLists.txt  test_Tape.cpp
